edit password functionality added

--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -2,3 +2,7 @@ label.title=Login Page
 label.firstName=First Name
 label.lastName=Last Name
 label.submit=Login
+
+password.confirmdifferent=Confirm password is different from new password
+password.wrongExistingPassword= Old password is not correct
+password.minSize6= Minimum size of password must be 6
