renamed EditPasswordDTOO to EditPasswordDTO

--- a/webapp/src/main/resources/messages_nl.properties
+++ b/webapp/src/main/resources/messages_nl.properties
@@ -2,3 +2,5 @@ label.title=Login pagina
 label.firstName= Voornaam
 label.lastName=Achternaam
 label.submit= Login
+password.minSize6=
+app.dateformat=dd/mm/yyyy
