finished model test (except CarUsagePersistenceTest)

--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -6,4 +6,4 @@ label.submit=Login
 password.confirmdifferent=Confirm password is different from new password
 password.wrongExistingPassword= Old password is not correct
 password.minSize6= Minimum size of password must be 6
-app.dateformat=dd/mm/yyyy
+app.dateformat=dd/MM/yyyy
