--- a/webapp/src/main/resources/messages_nl.properties
+++ b/webapp/src/main/resources/messages_nl.properties
@@ -3,4 +3,4 @@ label.firstName= Voornaam
 label.lastName=Achternaam
 label.submit= Login
 password.minSize6=
-app.dateformat=dd/mm/yyyy
+app.dateformat=dd/MM/yyyy
