css and internationalization for packs and options

--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -7,3 +7,26 @@ password.confirmdifferent=Confirm password is different from new password
 password.wrongExistingPassword= Old password is not correct
 password.minSize6= Minimum size of password must be 6
 app.dateformat=dd/MM/yyyy
+
+car.createnew = Add new Car
+car.brand = Brand
+car.model = Model
+car.edit = Edit Car
+car.delete = Delete Car from Catalog
+
+option.new = Add new Option
+option.name = Name
+option.namem = Name*
+option.description = Description
+
+pack.new = Create New Pack!
+pack.name = Name
+pack.namem = Name*
+pack.price = Price
+pack.nbroptions = Number of Options
+pack.edit = Edit Pack
+pack.newoption = Add new Option to Pack
+pack.selectedoptions = Selected Options
+pack.addoptionto = Add this Option to Pack
+pack.removeoption = Remove Option from pack
+pack.saveupdate = Save updated Pack
