--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -30,3 +30,32 @@ pack.selectedoptions = Selected Options
 pack.addoptionto = Add this Option to Pack
 pack.removeoption = Remove Option from pack
 pack.saveupdate = Save updated Pack
+
+car.brandm = Brand*
+car.modelm = Model*
+car.categorym = Category*
+car.pkm = PK*
+car.emissionm = Emission*
+car.fueltypem = Fuel Type*
+car.typem = Car Type*
+car.fiscalhpm = Fiscal HP*
+car.deliverytimem = Delivery Time in Months*
+car.idealkmm = Ideal KM*
+car.maxkmm = Maximum KM*
+car.pricem = List Price*
+car.benefitm = Benefit*
+car.upgrade = Amount Upgrade
+car.downgrade = Amount Downgrade
+car.gotopacks = Go to Pack/Option selection
+car.basepacks = Base Packs
+car.optionalpacks = Optional Packs
+car.removepack = Remove Pack
+car.removeoption = Remove Option
+car.allpacks = All Packs
+car.alloptions = Extra Options
+car.savenew = Save New Car
+car.setbasepack = Set as Base Pack
+car.addextrapack = Add as Optional Pack
+car.addoption = Add Option
+car.extraposoptions = Options available
+car.update = Update Car
