css and internationalization for employee and edit password

--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -59,3 +59,29 @@ car.addextrapack = Add as Optional Pack
 car.addoption = Add Option
 car.extraposoptions = Options available
 car.update = Update Car
+
+employee.createnew = Create New Employee
+employee.name = Name
+employee.mail = E-mail
+employee.funclevel = Functional Level
+employee.permission = Permission to order new Car
+employee.servicedate = In service date
+employee.edit = Edit Employee
+employee.save = Save Employee
+employee.role = Role
+employee.password = Password
+
+employee.namem = Name*
+employee.mailm = E-mail*
+employee.funclevelm = Functional Level*
+employee.permissionm = Permission to order new Car*
+employee.servicedatem = In service date*
+employee.rolem = Role*
+employee.passwordm = Password*
+
+employee.newpassword = New Password*
+employee.oldpassword = Old Password*
+employee.confirmpassword = Confirm Password*
+employee.updatepassword = Update Password
+
+
