css and internationalization for allow order and order available

--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -13,6 +13,18 @@ car.brand = Brand
 car.model = Model
 car.edit = Edit Car
 car.delete = Delete Car from Catalog
+car.category = Category
+car.pk = Horse Power
+car.emission = Emission
+car.fueltype = Fuel Type
+car.type = Car Type
+car.fiscalhp = Fiscal HP
+car.deliverytime = Delivery Time in Months
+car.idealkm = Ideal KM
+car.maxkm = Maximum KM
+car.price = List Price
+car.benefit = Benefit
+
 
 option.new = Add new Option
 option.name = Name
@@ -31,10 +43,11 @@ pack.addoptionto = Add this Option to Pack
 pack.removeoption = Remove Option from pack
 pack.saveupdate = Save updated Pack
 
+car.details = Car Details
 car.brandm = Brand*
 car.modelm = Model*
 car.categorym = Category*
-car.pkm = PK*
+car.pkm = Horse Power*
 car.emissionm = Emission*
 car.fueltypem = Fuel Type*
 car.typem = Car Type*
@@ -44,8 +57,8 @@ car.idealkmm = Ideal KM*
 car.maxkmm = Maximum KM*
 car.pricem = List Price*
 car.benefitm = Benefit*
-car.upgrade = Amount Upgrade
-car.downgrade = Amount Downgrade
+car.upgrade = Upgrade Amount
+car.downgrade =  Downgrade Amount
 car.gotopacks = Go to Pack/Option selection
 car.basepacks = Base Packs
 car.optionalpacks = Optional Packs
@@ -59,6 +72,10 @@ car.addextrapack = Add as Optional Pack
 car.addoption = Add Option
 car.extraposoptions = Options available
 car.update = Update Car
+car.options = Car Options
+car.pictures = Car pictures
+car.basepack = Base Packkkkk
+car.fillcolor = Fill in Color
 
 employee.createnew = Create New Employee
 employee.name = Name
@@ -83,5 +100,49 @@ employee.newpassword = New Password*
 employee.oldpassword = Old Password*
 employee.confirmpassword = Confirm Password*
 employee.updatepassword = Update Password
+employee.allow = Allow
 
 
+order.allow = Allow Ordering Car
+order.nomailfound = No employee found for the given email
+order.givemail = Give in email
+order.alloworder = Allow Order
+order.employeesneednewcar = Employees That Need New Car
+order.criteriareached =  These employees meet one or more criteria and need to order a new car.
+order.nocriteriareached = No employees that meet the criteria to order a new car.
+
+selectcar.ordercar = Order Car
+selectcar.fromcatalog = From Catalog:
+selectcar.funclevel = Functional Level
+selectcar.allpossible = All Possible
+selectcar.downgrade = Downgrade
+selectcar.mylevel = My Level
+selectcar.upgrade = Upgrade
+selectcar.nomatch = No cars matching criteria found.
+selectcar.fromfreepool = From Free Pool
+selectcar.color = Color
+selectcar.currentkm = Current Kilometer
+
+
+color.black = Black
+color.silver = Silver
+color.white = White
+color.blue = Blue
+color.red = Red
+color.green = Green
+color.yellow = Yellow
+color.orange = Orange
+
+ordercar.pack = Pack
+ordercar.options = Options
+ordercar.select = Select
+ordercar.option = option
+ordercar.description = Description
+ordercar.extrapack = Select Extra Pack
+ordercar.extraoption = Select Extra Option
+
+order.confirmed = Order Confirmed
+order.sent = Your order has been placed and is sent to Fleet.
+order.whentotreat = Fleet will treat this as soon as possible.
+order.return = Return to your
+order.personalview = personal view
