css and internationalisation for confirm pages added

--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -101,6 +101,7 @@ employee.oldpassword = Old Password*
 employee.confirmpassword = Confirm Password*
 employee.updatepassword = Update Password
 employee.allow = Allow
+employee.details = Employee Details
 
 
 order.allow = Allow Ordering Car
@@ -146,3 +147,32 @@ order.sent = Your order has been placed and is sent to Fleet.
 order.whentotreat = Fleet will treat this as soon as possible.
 order.return = Return to your
 order.personalview = personal view
+order.specificdetails = Order Specific Details
+order.date = Order Date
+
+confirm.ordersto = Orders To Confirm
+confirm.noorders = No Orders to Confirm
+confirm.order = Confirm Order
+confirm.employee = Employee
+confirm.orderedon  = Ordered On
+confirm.savechanges = Save Changes And Confirm
+confirm.startdateerror = Make sure the start date is in the correct format.
+corfirm.initialenddateerror = Make sure the initial end date is in the correct format.
+confirm.licenseplateerror = Make sure the license plate is filled in.
+confirm.priceerror = Make sure the price is filled in. (>0)
+confirm.startdate = Sart date
+confirm.initialenddate = Initial EndDate
+confirm.licenseplate = License Plate
+confirm.price = Price
+confirm.extrapacks = Extra Packs
+confirm.noextrapacksordered = No Extra Packs Ordered
+
+managecars.inuse = In Use
+managecars.ourcars = Our Cars
+managecars.nocarsinuse = No Cars in Use
+managecars.action = Action
+managecars.car = Car
+managecars.details = Details
+managecars.tofreepool = Put in Free Pool
+managecars.infreepool = In Free Pool
+managecars.emptypool = No Cars in Free Pool
