Ordering can now be disallowed, a placed order can now be disallowed

--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -101,15 +101,22 @@ employee.oldpassword = Old Password*
 employee.confirmpassword = Confirm Password*
 employee.updatepassword = Update Password
 employee.allow = Allow
+employee.disallow = Disallow
 
 
 order.allow = Allow Ordering Car
+order.disallow = Disallow Ordering Car
 order.nomailfound = No employee found for the given email
 order.givemail = Give in email
 order.alloworder = Allow Order
 order.employeesneednewcar = Employees That Need New Car
 order.criteriareached =  These employees meet one or more criteria and need to order a new car.
 order.nocriteriareached = No employees that meet the criteria to order a new car.
+
+disalloworder.disallow = Disallow Ordering Car
+disalloworder.employeeswithpermission = Employees With Permission
+disalloworder.havepermission =  These employees have permission to order a new car.
+disalloworder.noemployees = No employees that have permission to order a new car.
 
 selectcar.ordercar = Order Car
 selectcar.fromcatalog = From Catalog:
@@ -146,3 +153,14 @@ order.sent = Your order has been placed and is sent to Fleet.
 order.whentotreat = Fleet will treat this as soon as possible.
 order.return = Return to your
 order.personalview = personal view
+
+
+
+mail.disalloworder.subject=Order Rejected
+mail.disalloworder.text=Your order has been rejected by fleet. You will be notified when you can order again.
+mail.confirmorder.text=Your order has been confirmed by fleet. Your keys will be delivered to you personally.
+mail.confirmorder.subject=Order Confirmed
+mail.disallowordering.subject=Ordering Car Disabled
+mail.disallowordering.text=Fleet has withdrawn your permission to order a new car.
+mail.allowordering.subject=Ordering Car Available
+mail.allowordering.text=From this point, it is possible to order a new car on the fleet portal.
