add new option bug fixed in create and edit pack

--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -176,3 +176,4 @@ managecars.details = Details
 managecars.tofreepool = Put in Free Pool
 managecars.infreepool = In Free Pool
 managecars.emptypool = No Cars in Free Pool
+option.namemissing = Please fill in a name
