styled personaloverview a bit

--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -157,18 +157,18 @@ order.personalview = personal view
 order.specificdetails = Order Specific Details
 order.date = Order Date
 
-confirm.ordersto = Orders To Confirm
-confirm.noorders = No Orders to Confirm
-confirm.order = Confirm Order
+confirm.ordersto = Open Orders
+confirm.noorders = No open orders.
+confirm.order = Confirm/Disallow Order
 confirm.employee = Employee
 confirm.orderedon  = Ordered On
-confirm.savechanges = Save Changes And Confirm
+confirm.savechanges = Save And Confirm
 confirm.startdateerror = Make sure the start date is in the correct format.
-corfirm.initialenddateerror = Make sure the initial end date is in the correct format.
+confirm.initialenddateerror = Make sure the initial end date is in the correct format.
 confirm.licenseplateerror = Make sure the license plate is filled in.
 confirm.priceerror = Make sure the price is filled in. (>0)
-confirm.startdate = Sart date
-confirm.initialenddate = Initial EndDate
+confirm.startdate = Start date
+confirm.initialenddate = Initial End Date
 confirm.licenseplate = License Plate
 confirm.price = Price
 confirm.extrapacks = Extra Packs
@@ -183,8 +183,11 @@ managecars.details = Details
 managecars.tofreepool = Put in Free Pool
 managecars.infreepool = In Free Pool
 managecars.emptypool = No Cars in Free Pool
+managecars.edit = Edit
 option.namemissing = Please fill in a name
 
+
+ourcar.licenseplate = License Plate
 
 mail.disalloworder.subject=Order Rejected
 mail.disalloworder.text=Your order has been rejected by fleet. You will be notified when you can order again.
