translation changed in create pack

--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -40,7 +40,7 @@ pack.edit = Edit Pack
 pack.newoption = Add new Option to Pack
 pack.selectedoptions = Selected Options
 pack.addoptionto = Add this Option to Pack
-pack.removeoption = Remove Option from pack
+pack.removeoption = Remove
 pack.saveupdate = Save updated Pack
 
 car.details = Car Details
