fixed link to overview on order confirmation

--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -153,7 +153,7 @@ order.confirmed = Order Confirmed
 order.sent = Your order has been placed and is sent to Fleet.
 order.whentotreat = Fleet will treat this as soon as possible.
 order.return = Return to your
-order.personalview = personal view
+order.personalview = personal overview
 order.specificdetails = Order Specific Details
 order.date = Order Date
 
