changed Fill In Color to Pick A Color when ordering a car

--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -75,7 +75,7 @@ car.update = Update Car
 car.options = Car Options
 car.pictures = Car pictures
 car.basepack = Base Packkkkk
-car.fillcolor = Fill in Color
+car.fillcolor = Pick a Color
 
 employee.createnew = Create New Employee
 employee.name = Name
