createcar -> form width is now 50%, input fields that take decimals are now number inputs, error messages are red now, fixed i18n bug with picture label

--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -74,6 +74,7 @@ car.extraposoptions = Options available
 car.update = Update Car
 car.options = Car Options
 car.pictures = Car pictures
+car.picture = Picture
 car.basepack = Base Packkkkk
 car.fillcolor = Pick a Color
 
