fixed more bugs, user gets notified when he changes his password

--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -78,6 +78,8 @@ car.picture = Picture
 car.basepack = Base Packkkkk
 car.fillcolor = Pick a Color
 
+caroption.name = Name
+caroption.description = Description
 employee.createnew = Create New Employee
 employee.name = Name
 employee.mail = E-mail
