cleanup and button styling for packs and options

--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -86,7 +86,7 @@ employee.mail = E-mail
 employee.funclevel = Functional Level
 employee.permission = Permission to order new Car
 employee.servicedate = In service date
-employee.edit = Edit Employee
+employee.edit = Edit
 employee.save = Save Employee
 employee.role = Role
 employee.password = Password
