changed packkkk to pack

--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -74,7 +74,7 @@ car.update = Update Car
 car.options = Car Options
 car.pictures = Car pictures
 car.picture = Picture
-car.basepack = Base Packkkkk
+car.basepack = Base Pack
 car.fillcolor = Pick a Color
 
 caroption.name = Name
