added languages links

--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -256,7 +256,7 @@ overview.extrapacks.name = Name
 overview.extrapacks.options = Options
 overview.extraoptions = Extra Options
 overview.extraoptions.name = Name
-overview.extraoptions.options = Options
+overview.extraoptions.description = Description
 overview.pictures = Pictures
 overview.usage = Usage
 overview.usage.details = Details
@@ -271,3 +271,7 @@ overview.usage.updates.amountfuelledsincelastupdate = Amount Fuelled Since Last 
 overview.usage.updates.totalpaidforfuel = Total Paid For Fuel
 none = None
 
+
+fragments.navbar.language = Language
+fragments.navbar.language.english = English
+fragments.navbar.language.dutch = Dutch
