created catalogue all users can access

--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -275,3 +275,9 @@ none = None
 fragments.navbar.language = Language
 fragments.navbar.language.english = English
 fragments.navbar.language.dutch = Dutch
+fragments.navbar.catalogue = Catalogue
+
+catalogue.catalogue = Catalogue
+catalogue.funclvl = Functional level
+
+selectcar.noneinfreepool = No cars in the free pool.
