--- a/webapp/src/main/resources/messages_nl.properties
+++ b/webapp/src/main/resources/messages_nl.properties
@@ -4,3 +4,10 @@ label.lastName=Achternaam
 label.submit= Login
 password.minSize6=
 app.dateformat=dd/MM/yyyy
+
+
+fragments.navbar.catalogue = Catalogus
+catalogue.catalogue = Catalogus
+catalogue.funclvl = Functioneel level
+
+selectcar.noneinfreepool = Geen auto's in het wagenpark
