add functional level in car table

--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -13,7 +13,7 @@ car.brand = Brand
 car.model = Model
 car.edit = Edit Car
 car.delete = Delete from Catalog
-car.category = Category
+car.category = Functional Level
 car.pk = Horse Power
 car.emission = Emission
 car.fueltype = Fuel Type
@@ -45,7 +45,7 @@ pack.saveupdate = Save updated Pack
 car.details = Car Details
 car.brandm = Brand*
 car.modelm = Model*
-car.categorym = Category*
+car.categorym = Functional Level*
 car.pkm = Horse Power*
 car.emissionm = Emission*
 car.fueltypem = Fuel Type*
