--- a/webapp/src/main/resources/messages_nl.properties
+++ b/webapp/src/main/resources/messages_nl.properties
@@ -22,7 +22,7 @@ car.brand = Merk
 car.model = Model
 car.edit = Wijzig Auto
 car.delete = Verwijder uit catalogus
-car.category = Categorie
+car.category = Functioneel Level
 car.pk = Paardenkracht
 car.emission = Uitstoot
 car.fueltype = Brandstof type
@@ -54,7 +54,7 @@ pack.saveupdate = Save aangepast pakket
 car.details = Auto Details
 car.brandm = Merk*
 car.modelm = Model*
-car.categorym = Category*
+car.categorym = Functioneel Level*
 car.pkm = Horse Power*
 car.emissionm = Emission*
 car.fueltypem = Brandstof Type*
