--- a/webapp/src/main/resources/messages_en.properties
+++ b/webapp/src/main/resources/messages_en.properties
@@ -278,7 +278,7 @@ fragments.navbar.language = Language
 fragments.navbar.language.english = English
 fragments.navbar.language.dutch = Dutch
 fragments.navbar.catalogue = Catalogue
-
+catalogue.possibletoorder = Possible To Order
 catalogue.catalogue = Catalogue
 catalogue.funclvl = Functional level
 
